Adjust register pasage

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,13 @@
 <div class="justify-center">
     <mat-form-field appearance="outline" class="margin-input">
         <mat-label>City</mat-label>
-        <input [(ngModel)]="city" matInput placeholder="Enter city name" required>
+        <input [(ngModel)]="city" matInput placeholder="Enter city name">
         <!-- <mat-hint>Hint</mat-hint> -->
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="margin-input">
         <mat-label>Zip code</mat-label>
-        <input [(ngModel)]="zipcode" matInput placeholder="Enter zip code" type="celphone" mask="000-000" required>
+        <input [(ngModel)]="zipcode" matInput placeholder="Enter zip code" type="celphone" mask="000-000">
         <mat-hint>min 100000 - max 999999</mat-hint>
     </mat-form-field>
 </div>
